Fix flickering effect by using animationend Event Listener and add optional collapse effect in Line 74

--- a/frontend/src/components/AuthNavBar/AuthNavBar.scss
+++ b/frontend/src/components/AuthNavBar/AuthNavBar.scss
@@ -96,7 +96,7 @@
     
     // my attempt:
     
-    animation: fadeOut 0.5s;
+    animation: fadeOut 0.5s, moveLeft 0.5s;
 
 }
 
